# ghost-lattice

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  ghost_lattice_mission_digital_twin_dev_guide.md
apps/replay-ui/: package-lock.json  package.json  vitest.config.ts
apps/replay-ui/__tests__/: helpers.ts
apps/replay-ui/__tests__/autonomy/: allocator.test.ts  task-decomposer.test.ts
apps/replay-ui/__tests__/autonomy/behaviors/: conserve-energy.test.ts  decoy-emit.test.ts  fan-out-search.test.ts  hold-relay.test.ts  passive-track.test.ts  regroup.test.ts  return-anchor.test.ts
apps/replay-ui/__tests__/context/: context.test.ts
apps/replay-ui/__tests__/ddil/: gps-model.test.ts  jammer-model.test.ts  link-model.test.ts  network-graph.test.ts
apps/replay-ui/__tests__/integration/: multi-interaction.test.ts  sim-engine.test.ts  stress.test.ts
apps/replay-ui/__tests__/invariants/: event-log.test.ts  physical-correctness.test.ts
apps/replay-ui/__tests__/scenarios/: adaptive-behavior.test.ts  open-field-audit.test.ts
apps/replay-ui/__tests__/scoring/: metrics.test.ts
apps/replay-ui/public/data/golden_run/: autonomy_decision_trace.jsonl  metadata.json  mission_metric.jsonl  network_state.jsonl  objective_state.jsonl  (+1 more)
apps/replay-ui/src/app/: layout.tsx  page.tsx
apps/replay-ui/src/hooks/: use-sim-engine.ts
apps/replay-ui/src/lib/: replay-store.ts  types.ts
apps/replay-ui/src/sim/: config.ts  context.ts  engine.ts  interaction.ts  rng.ts  scenarios.ts
data/baselines/: single_agent_mission_001.yaml
data/runs/golden_run/: network_state.jsonl  objective_state.jsonl  operator_action.jsonl  scenario_event.jsonl  scorecard.json
data/scenarios/: mission_001.yaml
data/scenarios/schema/: scenario.schema.json
data/scenarios/tests/: test_schema.py
docs/architecture/: ARCHITECTURE.md  EVENT_SCHEMA.md
docs/demo-script/: DEMO_SCRIPT.md
infra/docker/: .dockerignore  Dockerfile.sim  init-db.sql
ros2_ws/src/behavior_engine/: package.xml  setup.py
ros2_ws/src/behavior_engine/behavior_engine/: engine_node.py
ros2_ws/src/behavior_engine/behavior_engine/behaviors/: __init__.py  base.py  conserve_energy.py  decoy_emit.py  fan_out_search.py  hold_relay.py  passive_track.py  regroup.py  return_anchor.py
ros2_ws/src/coordination_nodes/: package.xml  setup.py
ros2_ws/src/coordination_nodes/coordination_nodes/: mesh_awareness.py  partition_detector.py
ros2_ws/src/ddil_bridge/: package.xml  setup.py
ros2_ws/src/ddil_bridge/ddil_bridge/: bridge_node.py
ros2_ws/src/event_recorder/: package.xml  setup.py
ros2_ws/src/event_recorder/event_recorder/: recorder_node.py
ros2_ws/src/gl_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/gl_interfaces/msg/: AutonomyTrace.msg  FleetState.msg  MissionMetric.msg  NetworkLink.msg  NetworkState.msg  ObjectiveState.msg  OperatorCommand.msg  RoleAssignment.msg  RoleAuction.msg  RoleClaim.msg  ScenarioEvent.msg  VehicleHealth.msg  VehicleState.msg
ros2_ws/src/gl_interfaces/srv/: GetFleetCapabilities.srv  InjectDisruption.srv  SubmitMissionIntent.srv
ros2_ws/src/mission_executor/: package.xml  setup.py
ros2_ws/src/mission_executor/mission_executor/: executor_node.py
ros2_ws/src/role_allocator/: package.xml  setup.py
ros2_ws/src/role_allocator/role_allocator/: allocator_node.py
ros2_ws/src/scenario_engine/: package.xml  setup.py
ros2_ws/src/scenario_engine/scenario_engine/: engine_node.py
ros2_ws/src/telemetry_bridge/: package.xml  setup.py
ros2_ws/src/telemetry_bridge/telemetry_bridge/: bridge_node.py
scripts/: generate_golden_run.py  wait_for_ready.sh
services/ddil-engine/: Dockerfile  requirements.txt
services/ddil-engine/app/: api.py  gps_model.py  jammer_model.py  link_model.py  network_graph.py
services/ddil-engine/tests/: test_jammer.py  test_link_model.py  test_partitions.py
services/fleet-registry/: Dockerfile
services/fleet-registry/app/: models.py  registry.py
services/fleet-registry/tests/: test_registry.py
services/mission-compiler/: Dockerfile  requirements.txt
services/mission-compiler/app/: compiler.py  models.py
services/mission-compiler/tests/: test_compiler.py
services/replay-api/app/: main.py
services/scoring-engine/: Dockerfile  requirements.txt
services/scoring-engine/app/: api.py  metrics.py
services/scoring-engine/tests/: test_metrics.py
sim/launch/: multi_vehicle.sh  single_vehicle.sh
sim/vehicle-models/: vendor_a_params.yaml  vendor_b_params.yaml  vendor_c_params.yaml
sim/worlds/: coastal_industrial_v1.sdf  empty_test.sdf
(+30 files in other folders)
