<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>event_recorder</name>
  <version>0.1.0</version>
  <description>Record all Ghost Lattice events to JSONL files and PostgreSQL</description>
  <maintainer email="dev@ghost-lattice.local">Ghost Lattice Dev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>gl_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
